--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,4 +45,14 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0; }
+
 /*# sourceMappingURL=style.css.map */
